--- a/muscle_front_h.html
+++ b/muscle_front_h.html
@@ -7,7 +7,7 @@
   <style>
     body {
       margin: 0;
-      background: transparent; /* fond visible */
+      background: #000000; /* fond visible */
       display: flex;
       justify-content: center;
       align-items: center;
@@ -111,6 +111,7 @@
 
 </body>
 </html>
+
 
 
 
